--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,78 @@
-flask
 aiofiles
 aiohttp
+apscheduler
 asyncio
+bard
 beautifulsoup4
+bing_image_downloader
+bs4
+telegraph
+wget
+unidecode
+cloudscraper
+curl-cffi
+deepai
 dnspython
+emojis
+Faker
 ffmpeg-python
+future
+g4f
+geopy
 gitpython
+google-api-python-client
+gpytranslate
+gtts
 hachoir
 heroku3
-httpx[http2]==0.25.2
+httpx[http2]==0.27.2
+img2pdf
+instaloader
+langdetect
+lexica-api
 motor
+nekosbest
 numpy
+openai==0.28.0
 opencv-python
-pillow==9.5.0
+pickledb
+pillow==10.3.0
 psutil
-py-tgcalls==0.9.7
+ntgcalls
+py-tgcalls==0.9.7  # Only one version of py-tgcalls is specified
+pycountry
+pycryptodome
+pydub
+pyfiglet
 pykeyboard
-kurigram==2.1.35
+pyshorteners
 python-dotenv
+python-telegram-bot
+python-whois
+pyttsx3
+pytube
+pytz
 pyyaml
+qrcode
 requests
+search_engine_parser
 speedtest-cli
+SpeechRecognition
 spotipy
-tgcrypto
-unidecode
-uvloop
-gunicorn==20.1.0
-yt-dlp
+stripe==10.7.0
+mysql-connector-python==9.0.0
+telebot==0.0.5
+youtube_dl==2021.12.17
+git+https://github.com/TeamZyro/daxxhub.git
+pornhub-api==0.3.0
+pyrogram
+python-telegram-bot==21.1.1
+pyyaml==6.0.1
+MukeshAPI
 youtube-search
 youtube-search-python
+git+https://github.com/KurimuzonAkuma/pyrogram.git
+yt-dlp
+git+https://github.com/AsmSafone/SafoneAPI
+python-telegram-bot
+instaloader
