--- a/app.json
+++ b/app.json
@@ -1,98 +1,73 @@
 {
-    "name": "Noxx Music",
+    "name": "ZYRO Music",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://telegra.ph/Aviax-02-24",
+    "logo": "https://telegra.ph/file/dbb3222d0fd3712e2a0e4.jpg",
     "keywords": [
-        "python3",
-        "telegram",
-        "bot",
-        "NoxxNetwork",
-        "MusicBot",
-        "telegram-bot",
-        "pyrogram"
+    "python3",
+    "telegram",
+    "bot",
+    "ZYRO",
+    "MusicBot",
+    "telegram-bot",
+    "pyrogram"
     ],
     "env": {
-        "API_ID": {
-            "description": "Get this value from https://my.telegram.org",
-            "value": "29448785",
-            "required": true
-        },
-        "API_HASH": {
-            "description": "Get this value from https://my.telegram.org",
-            "value": "599574f6aff0a09ebb76305b58e7e9c2",
-            "required": true
-        },
-        "BOT_TOKEN": {
-            "description": "A Bot's token from Botfather",
-            "value": "",
-            "required": true
-        },
-        "MONGO_DB_URI": {
-            "description": "Get a mongodb url from https://cloud.mongodb.com.",
-            "value": "mongodb+srv://pusers:nycreation@nycreation.pd4klp1.mongodb.net/?retryWrites=true&w=majority&appName=NYCREATION",
-            "required": true
-        },
-        "OWNER_ID": {
-            "description": "The user id of user whom you would like to add as OWNER.",
-            "value": "1786683163",
-            "required": true
-        },
-        "OWNER_USERNAME": {
-            "description": "The username of the owner (without @)",
-            "value": "",
-            "required": false
-        },
-        "STRING_SESSION": {
-            "description": "A Pyrogram v2 String Session from Replit.",
-            "value": "",
-            "required": true
-        },
-        "GIT_TOKEN": {
-            "description": "Your GitHub personal access token (if needed for private repos)",
-            "value": "",
-            "required": false
-        },
-        "HEROKU_API_KEY": {
-            "description": "Your Heroku account's API key",
-            "value": "",
-            "required": false
-        },
-        "HEROKU_APP_NAME": {
-            "description": "Your heroku app name",
-            "value": "",
-            "required": false
-        },
-        "LOG_GROUP_ID": {
-            "description": "Your Log Group ID, add your bot and promote as an admin with full rights!. Do not ever try to put channel ID here.",
-            "value": "-1002321189618",
-            "required": true
-        },
-        "SUPPORT_GROUP": {
-            "description": "Your support group username (without @)",
-            "value": "https://t.me/ShrutiBotsupport",
-            "required": false
-        },
-        "SUPPORT_CHANNEL": {
-            "description": "Your support channel username (without @)",
-            "value": "https://t.me/ShrutiBots",
-            "required": false
-        },
-        "API_KEY": {
-            "description": "An additional API key for your bot (if needed)",
-            "value": "30DxNexGenBots19bc74",
-            "required": false
-        }
+      "API_ID": {
+        "description": "Get this value from https://my.telegram.org",
+        "value": "22792918",
+        "required": true
+      },
+      "API_HASH": {
+        "description": "Get this value from https://my.telegram.org",
+        "value": "ff10095d2bb96d43d6eb7a7d9fc85f81",
+        "required": true
+      },
+      "BOT_TOKEN": {
+        "description": "A Bot's token from Botfather",
+        "value": "",
+        "required": true
+      },
+      "MONGO_DB_URI": {
+        "description": "Get a mongodb url from https://cloud.mongodb.com.",
+        "value": "mongodb+srv://Alisha:Alisha123@cluster0.yqcpftw.mongodb.net/?retryWrites=true&w=majority",
+        "required": true
+      },
+      "OWNER_ID": {
+        "description": "The user id of user whom you would like to add as OWNER.",
+        "value": "",
+        "required": true
+      },
+      "STRING_SESSION": {
+        "description": "A Pyrogram v2 String Session from @STRINGSEASO_NBOT on Telegram.",
+        "value": "",
+        "required": true
+      },
+      "DB_NAME": {
+        "description": "Your DB_NAME",
+        "value": "none",
+        "required": false
+      },
+      "LOGGER_ID": {
+        "description": "Your Log Group ID, add your bot and promote as an admin with full rights!. Channel ki id mat daal dena bsdk.",
+        "value": "-1002155818429",
+        "required": true
+      },
+      "NEXI_VID": {
+        "description": "Startvideo",
+        "value": "https://files.catbox.moe/ror8ec.MP4",
+        "required": true
+      }
     },
     "buildpacks": [
-        {
-            "url": "heroku/python"
-        },
-        {
-            "url": "heroku/nodejs"
-        },
-        {
-            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
-        }
-    ],
-    "stack": "container"
+          {
+              "url": "heroku/python"
+          },
+          {
+              "url": "heroku/nodejs"
+          },
+          {
+              "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+          }
+      ],
+      "stack": "container"
 }
