--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Noxx Music",
+    "name": "chinna Music",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
     "logo": "https://telegra.ph/Aviax-02-24",
     "keywords": [
@@ -85,10 +85,10 @@
     },
     "buildpacks": [
         {
-            "url": "heroku/nodejs"
+            "url": "heroku/python"
         },
         {
-            "url": "heroku/python"
+            "url": "heroku/nodejs"
         },
         {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
